# py_coverage

./: CMakeLists.txt  package.xml  setup.py
scripts/: main.py
src/py_coverage/: grid_based_sweep_coverage_path_planner.py  grid_map.py  tools.py
